# homeserver

./: README.md  hosts.py  pyproject.toml  restart.py  setup.py  stop.py
apps/filebrowser/: docker-compose.yml
apps/nextcloud/: docker-compose.yml
apps/pihole/: docker-compose.yml
apps/portainer/: docker-compose.yml
apps/umbrel/: docker-compose.yml
apps/watchtower/: docker-compose.yml
